--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,9 @@
     <title>FoComponent test</title>
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <link rel="stylesheet" type="text/css" src="style.css" />
     <base href="/FoComponents/web/">
 </head>
-
 <body>
 
 <fo-app></fo-app>
