image file component work

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
     <title>FoComponent test</title>
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" src="style.css" />
     <base href="/FoComponents/web/">
 </head>
