Carousel examples now showing correct html

--- a/example/lib/carousel/carousel.html
+++ b/example/lib/carousel/carousel.html
@@ -17,7 +17,7 @@
   </fo-carousel>
 </section>
 <section label="RadioButtons"
-         [html]="htmlDefault">
+         [html]="htmlRadioButtons">
   <fo-carousel [showArrowButtons]="false"
                [showRadioButtons]="true">
     <fo-carousel-slide>
