--- a/example/lib/data_table/data_table.html
+++ b/example/lib/data_table/data_table.html
@@ -3,7 +3,10 @@
                 source="https://github.com/afpatmin/fo_components/tree/master/lib/components/fo_data_table">
 </component-info>
 <section label="Default"
-         [html]="htmlDefault">
+         [html]="htmlDefault"
+         [dart]="dartDefault">
   <fo-data-table [data]="data"
-                 [columns]="columns"></fo-data-table>
+                 [columns]="columns"
+                 (rowclick)="clickedId = $event"></fo-data-table>
+                <p>Clicked country: {{clickedId}}</p>
 </section>
