Added TextInput example

--- a/example/lib/carousel/carousel.html
+++ b/example/lib/carousel/carousel.html
@@ -32,7 +32,7 @@
   </fo-carousel>
 </section>
 <section label="Interval"
-         [html]="htmlDefault">
+         [html]="htmlInterval">
   <fo-carousel [duration]="3000"
                [showArrowButtons]="false">
     <fo-carousel-slide>
