--- a/example/lib/data_table/data_table.html
+++ b/example/lib/data_table/data_table.html
@@ -1,5 +1,5 @@
 <component-info name="FoDataTableComponent"
-                description="A table for listing, sorting and filtering models"
+                description="A table for listing, sorting and filtering models."
                 source="https://github.com/afpatmin/fo_components/tree/master/lib/components/fo_data_table">
 </component-info>
 <section label="Default"
